# GuestProxyAgent

./: Cargo.toml
debian/: TODO  azure-guest-proxy-agent.dirs  azure-guest-proxy-agent.install  azure-guest-proxy-agent.lintian-overrides  azure-proxy-agent.dirs  azure-proxy-agent.install  azure-proxy-agent.lintian-overrides  changelog  control  copyright  proxy-agent.json  rules
debian/patches/: 0005-update-tower-http-and-thiserror-deps-to-new-vers.patch  0006-Update-sysinfo-build-dep.patch  0007-Drop-more-Windows-dependencies.patch  0008-don-t-build-setup-or-extension-components.patch  0009-Update-uuid-build-dep-and-drop-macro-diagnostics-fea.patch  Relax-serde-xml-rs-version-requirement.patch  Remove-some-Windows-dependencies.patch  loosen-tokio-util-constraint.patch  series  systemd-service-updates.patch  use-newer-itertools.patch
proxy_agent/: Cargo.toml
proxy_agent/src/acl/: linux_acl.rs
proxy_agent_extension/: Cargo.toml
proxy_agent_setup/src/linux/: GuestProxyAgent.service
proxy_agent_shared/: Cargo.toml
