[package]
name = "proxy_agent_shared"
version = "1.0.25"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.1.0"    # for event queue
once_cell = "1.17.0"          # use Lazy
time = { version = "0.3.30", features = ["formatting"] } 
thread-id = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"         # json Deserializer
regex = "1.9.5"               # match file name 
thiserror = "1.0.64"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

[target.'cfg(not(windows))'.dependencies]
os_info = "3.7.0"   # read Linux OS version and arch